--- a/app/src/main/res/layout/rs_item.xml
+++ b/app/src/main/res/layout/rs_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_resou"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:gravity="center" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorDark"
+        android:layout_margin="15dp"/>
 
 </android.support.constraint.ConstraintLayout>
