--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -36,7 +36,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:background="@drawable/close" />
+                        android:background="@drawable/close2" />
                 </LinearLayout>
                 <LinearLayout
                     android:padding="5dp"
